--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bridge.io-client",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "The client-side implementation of Bridge.IO",
   "main": "dist/bridge.io.js",
   "scripts": {
@@ -18,8 +18,7 @@
     "type": "git",
     "url": "git+https://github.com/hossein-zare/bridge.io-client.git"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "author": "Hossein Zare",
   "license": "MIT"
 }
