--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "bridge.io-client",
-  "version": "2.0.7",
+  "version": "2.0.8",
   "description": "The client-side implementation of Bridge.IO",
   "main": "dist/bridge.io.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
